# scimilarity

./: .gitignore  LICENSE  MANIFEST.in  NEWS.rst  README.rst  setup.cfg  setup.py
.codeboarding/: Cell Annotation & Query.md  Cell Embedding & Search.md  Data Management.md  General Utilities.md  Metric Learning Core.md  Ontology Service.md  Training Orchestration.md  Visualization & Interpretation.md  on_boarding.md
.github/workflows/: docker.yaml  pages.yaml  pypi-publish.yaml  pypi-publish.yml  pypi-test.yaml  pypi-test.yml
docker/: Dockerfile  start-notebook.sh
docs/: Makefile  about.rst  api.rst  conf.py  index.rst  install.rst  news.rst  requirements.txt  tutorials.rst
docs/_static/: custom.css  environment.yaml
docs/modules/: anndata_data_models.rst  b_colors.rst  cell_annotation.rst  cell_embedding.rst  cell_query.rst  cell_search_knn.rst  data_models.rst  interpreter.rst  nn_models.rst  ontologies.rst  tiledb_data_models.rst  training_models.rst  triplet_selector.rst  utils.rst  visualizations.rst  zarr_data_models.rst  zarr_dataset.rst
docs/notebooks/: advanced_tutorial.ipynb  cell_annotation_tutorial.ipynb  cell_search_tutorial.ipynb  cell_search_tutorial_1.ipynb  cell_search_tutorial_2.ipynb  cell_search_tutorial_3.ipynb  training_tutorial.ipynb
scripts/: build_annotation_knn.py  build_cellsearch_knn.py  build_cellsearch_metadata.py  build_embeddings.py  train.py
scripts/anndata/: build_annotation_knn_anndata.py  train_anndata.py
src/scimilarity/: __init__.py  anndata_data_models.py  b_colors.py  cell_annotation.py  cell_embedding.py  cell_query.py  cell_search_knn.py  data_models.py  interpreter.py  nn_models.py  ontologies.py  tiledb_data_models.py  training_models.py  triplet_selector.py  utils.py  visualizations.py  zarr_data_models.py  zarr_dataset.py
tests/: test_process_dataset.py
tests/data/: gene_order.tsv  test.h5ad
